# haskell-ifte

./: README.md  haskell-ifte.cabal
src/Data/: Ifte.hs
test/Data/: IfteSpec.hs
